--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,3 +11,22 @@
   -ms-transform: skewX(-45deg);
   transform: skewX(-45deg);
 }
+
+.dropDown {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 5px;
+  background: linear-gradient(145deg, #e6e6e6, #ffffff);
+  box-shadow: 20px 20px 39px #cfcfcf, -20px -20px 39px #ffffff;
+}
+
+.card {
+  border-radius: 5px;
+  background: linear-gradient(145deg, #e6e6e6, #ffffff);
+  box-shadow: 20px 20px 39px #cfcfcf, -20px -20px 39px #ffffff;
+}
